@@ -1,8 +1,11 @@
 - TODO arena patchouli
 - TODO press alt to show blacklist/whitelist
 
+
+
 2.4.16
 - Fix Curse of Pride text
+- Nameplate render offset
 
 2.4.15
 - Fix hostility orb not added to player inventory when inventory is full
